--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      src="https://cmp.gatekeeperconsent.com/min.js"
+      data-cfasync="false"
+    ></script>
+    <script
+      src="https://the.gatekeeperconsent.com/cmp.min.js"
+      data-cfasync="false"
+    ></script>
+    <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+    <script>
+      window.ezstandalone = window.ezstandalone || {};
+      ezstandalone.cmd = ezstandalone.cmd || [];
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#3498db" />
@@ -8,22 +21,25 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Random Avatar Generator | Create Unique SVG Avatars</title>
-    <meta name="description" content="Generate random avatars with customizable features. Download as SVG. No third-party libraries used. Built with React and Vite.">
+    <meta
+      name="description"
+      content="Generate random avatars with customizable features. Download as SVG. No third-party libraries used. Built with React and Vite."
+    />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    
+
     <!-- Schema.org structured data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Random Avatar Generator",
-        "url": "https://yourdomain.com/",
+        "name": "Free Avatar Generator",
+        "url": "https://freeavatargenerator.com/",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://yourdomain.com/?search={search_term_string}",
+          "target": "https://freeavatargenerator.com/?search={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
