--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
   <head>
     <script
-      src="https://cmp.gatekeeperconsent.com/min.js"
-      data-cfasync="false"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2741855150162807"
+      crossorigin="anonymous"
     ></script>
     <script
-      src="https://the.gatekeeperconsent.com/cmp.min.js"
-      data-cfasync="false"
+      async
+      custom-element="amp-ad"
+      src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
     ></script>
-    <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
-    <script>
-      window.ezstandalone = window.ezstandalone || {};
-      ezstandalone.cmd = ezstandalone.cmd || [];
-    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#3498db" />
@@ -26,23 +23,34 @@
       content="Generate random avatars with customizable features. Download as SVG. No third-party libraries used. Built with React and Vite."
     />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-    <!-- Schema.org structured data -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Free Avatar Generator",
-        "url": "https://freeavatargenerator.com/",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://freeavatargenerator.com/?search={search_term_string}",
-          "query-input": "required name=search_term_string"
-        }
-      }
-    </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2741855150162807"
+      crossorigin="anonymous"
+    ></script>
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-2741855150162807"
+      data-ad-slot="3299637017"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <amp-ad
+      width="100vw"
+      height="320"
+      type="adsense"
+      data-ad-client="ca-pub-2741855150162807"
+      data-ad-slot="3299637017"
+      data-auto-format="rspv"
+      data-full-width=""
+    >
+      <div overflow=""></div>
+    </amp-ad>
   </body>
 </html>
